新增 首页 更新所有宝贝

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -6,4 +6,9 @@
         android:orderInCategory="100"
         android:title="添加宝贝"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/menu_main_update_all"
+        android:orderInCategory="100"
+        android:title="更新所有宝贝"
+        app:showAsAction="never"/>
 </menu>
