新增设置界面, 添加批量导入宝贝的功能

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -11,4 +11,9 @@
         android:orderInCategory="100"
         android:title="更新所有宝贝"
         app:showAsAction="never"/>
+    <item
+        android:id="@+id/menu_main_setting"
+        android:orderInCategory="100"
+        android:title="设置"
+        app:showAsAction="never"/>
 </menu>
