--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -1,65 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/shape_item_main"
-    android:orientation="vertical"
-    android:padding="10dp"
     tools:layout_width="500px">
-
-    <com.linsh.lshutils.view.RatioImageView
-        android:id="@+id/iv_item_main_photo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:decidedRatio="1"
-        tools:src="@mipmap/ic_launcher"/>
-
-    <TextView
-        android:id="@+id/tv_item_main_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:ellipsize="end"
-        android:lines="1"
-        android:padding="3dp"
-        android:textColor="@color/text_title"
-        android:textSize="13sp"
-        tools:text="正版xxx 宝贝标题"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="top"
-        android:orientation="horizontal">
+        android:background="@drawable/shape_item_main"
+        android:orientation="vertical"
+        android:padding="10dp">
+
+        <com.linsh.lshutils.view.RatioImageView
+            android:id="@+id/iv_item_main_photo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:decidedRatio="1"
+            tools:src="@mipmap/ic_launcher"/>
 
         <TextView
-            android:id="@+id/tv_item_main_price"
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_item_main_title"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
-            android:lines="1"
-            android:text="¥500"
-            android:textColor="#FF5555"
-            android:textSize="14sp"/>
-
-        <TextView
-            android:id="@+id/tv_item_main_shopname"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
             android:ellipsize="end"
-            android:gravity="right"
             android:lines="1"
-            android:text="渊祥官方旗舰店"
-            android:textColor="@color/text_detail"
-            android:textSize="10sp"/>
+            android:padding="3dp"
+            android:textColor="@color/text_title"
+            android:textSize="13sp"
+            tools:text="正版xxx 宝贝标题"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="top"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_item_main_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:lines="1"
+                android:text="¥500"
+                android:textColor="#FF5555"
+                android:textSize="14sp"/>
+
+            <TextView
+                android:id="@+id/tv_item_main_shopname"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:ellipsize="end"
+                android:gravity="right"
+                android:lines="1"
+                android:text="渊祥官方旗舰店"
+                android:textColor="@color/text_detail"
+                android:textSize="10sp"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
-</LinearLayout>
+    <FrameLayout
+        android:id="@+id/fl_item_main_select"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+
+        <ImageView
+            android:id="@+id/tv_item_main_select"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_gravity="top|end"
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/selector_select"/>
+
+    </FrameLayout>
+
+</FrameLayout>
