--- a/app/src/main/res/layout/item_main.xml
+++ b/app/src/main/res/layout/item_main.xml
@@ -26,21 +26,44 @@
                 tools:layout_height="130dp"
                 tools:src="@mipmap/ic_launcher"/>
 
-            <TextView
-                android:id="@+id/tv_item_main_display"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
-                android:background="#cc00647a"
-                android:ellipsize="marquee"
-                android:gravity="center"
-                android:lines="1"
-                android:padding="3dp"
-                android:textColor="@color/white"
-                android:textSize="12sp"
-                android:visibility="gone"
-                tools:text="比收藏时下降666元"
-                tools:visibility="visible"/>
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_item_main_display_low"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#ccFF3377"
+                    android:ellipsize="marquee"
+                    android:gravity="center"
+                    android:lines="1"
+                    android:padding="3dp"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"
+                    android:visibility="gone"
+                    tools:text="比通知价格高666元"
+                    tools:visibility="visible"/>
+
+                <TextView
+                    android:id="@+id/tv_item_main_display_descend"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:background="#cc00647a"
+                    android:ellipsize="marquee"
+                    android:gravity="center"
+                    android:lines="1"
+                    android:padding="3dp"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"
+                    android:visibility="gone"
+                    tools:text="比收藏时下降666元"
+                    tools:visibility="visible"/>
+
+            </LinearLayout>
 
         </FrameLayout>
 
