--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -12,6 +12,11 @@
         android:title="更新所有宝贝"
         app:showAsAction="never"/>
     <item
+        android:id="@+id/menu_main_goto_taobao"
+        android:orderInCategory="100"
+        android:title="访问淘宝首页"
+        app:showAsAction="never"/>
+    <item
         android:id="@+id/menu_main_edit"
         android:orderInCategory="100"
         android:title="编辑"
