--- a/app/src/main/res/layout/item_main_header.xml
+++ b/app/src/main/res/layout/item_main_header.xml
@@ -1,56 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<HorizontalScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="10dp">
+    android:scrollbars="none">
 
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="标签："/>
+        android:orientation="horizontal"
+        android:padding="10dp">
 
-    <TextView
-        android:id="@+id/tv_item_main_header_tag"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/shape_tag"
-        android:drawableRight="@drawable/selector_arrow_small"
-        android:ellipsize="end"
-        android:gravity="center"
-        android:lines="1"
-        android:maxWidth="120dp"
-        android:minWidth="80dp"
-        android:paddingBottom="3dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="3dp"
-        android:text="所有"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="end"
+            android:text="平台："/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="end"
-        android:text="状态："/>
+        <TextView
+            android:id="@+id/tv_item_main_header_platform"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:background="@drawable/shape_tag"
+            android:drawableRight="@drawable/selector_arrow_small"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:lines="1"
+            android:maxWidth="120dp"
+            android:minWidth="50dp"
+            android:paddingBottom="3dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingTop="3dp"
+            android:text="所有"/>
 
-    <TextView
-        android:id="@+id/tv_item_main_header_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:background="@drawable/shape_tag"
-        android:drawableRight="@drawable/selector_arrow_small"
-        android:ellipsize="end"
-        android:gravity="center"
-        android:lines="1"
-        android:maxWidth="120dp"
-        android:minWidth="80dp"
-        android:paddingBottom="3dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="3dp"
-        android:text="无"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:text="标签："/>
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/tv_item_main_header_tag"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/shape_tag"
+            android:drawableRight="@drawable/selector_arrow_small"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:lines="1"
+            android:maxWidth="120dp"
+            android:minWidth="50dp"
+            android:paddingBottom="3dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingTop="3dp"
+            android:text="所有"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:gravity="end"
+            android:text="状态："/>
+
+        <TextView
+            android:id="@+id/tv_item_main_header_status"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:background="@drawable/shape_tag"
+            android:drawableRight="@drawable/selector_arrow_small"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:lines="1"
+            android:maxWidth="120dp"
+            android:minWidth="50dp"
+            android:paddingBottom="3dp"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingTop="3dp"
+            android:text="无"/>
+
+    </LinearLayout>
+
+</HorizontalScrollView>
