新增 不再关注宝贝，可以放入『未关注』状态中，不会对宝贝进行更新

--- a/app/src/main/res/layout/view_main_bottom.xml
+++ b/app/src/main/res/layout/view_main_bottom.xml
@@ -33,7 +33,7 @@
         android:gravity="center"
         android:minWidth="80dp"
         android:padding="10dp"
-        android:text="删除"
+        android:text="取消关注"
         android:textSize="16sp"/>
 
     <TextView
